<resources>
    <string name="app_name">ebook</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="email">邮箱</string>
    <string name="new_email">新邮箱</string>
    <string name="password">密码</string>
    <string name="new_pwd">新密码</string>
    <string name="captcha">验证码</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="get_captcha">获取验证码</string>
    <string name="home">首页</string>
    <string name="category">分类</string>
    <string name="search">搜索</string>
    <string name="mine">我的</string>
    <string name="ai">E宝</string>
    <string name="setting_password">设置密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="weekly_article"><b>本周精选</b></string>
    <string name="mine_user_name"><b>曼诺兰德</b></string>
    <string name="customer_service">联系客服</string>
    <string name="nickname">昵称</string>
    <string name="save">保存</string>
    <string name="phone">手机</string>
    <string name="catalogue">目录</string>
    <string name="comment">评论</string>
    <string name="send_comment">发表评论</string>
    <string name="write_comment">写评论</string>
    <string name="send">发送</string>
    <string name="logout">退出登录</string>
    <!--设置-->
    <string name="set_info">修改资料</string>
    <string name="set_email">更换邮箱</string>
    <string name="set_password">重置密码</string>


</resources>