<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/main_nav_home">
    <fragment
        android:id="@+id/main_nav_home"
        android:name="com.ebook.app.view.main.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/page_home" />
    <fragment
        android:id="@+id/main_nav_mine"
        android:name="com.ebook.app.view.main.me.MeFragment"
        android:label="@string/mine"
        tools:layout="@layout/page_me" />
    <fragment
        android:id="@+id/main_nav_ai"
        android:name="com.ebook.app.view.main.ai.AiFragment"
        android:label="@string/ai"
        tools:layout="@layout/page_ai" />
</navigation>