<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.set.SetInfoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/appbar"
                style="@style/EBook.MaterialToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_back_white"
                app:title="@string/set_email" />

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/set_email_til_new_email"
            style="@style/EBook.textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbar_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/set_email_et_new_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_email" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/set_email_btn_get_captcha"
            style="@style/EBook.button"
            android:layout_width="150dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="15dp"
            android:text="@string/get_captcha"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/set_email_til_new_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/set_email_til_captcha"
            style="@style/EBook.textInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toStartOf="@+id/set_email_btn_get_captcha"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/set_email_til_new_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/set_email_et_captcha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/captcha" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/set_email_btn_save"
            style="@style/EBook.button"
            android:layout_width="0dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/set_email_til_captcha" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>