<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="email"
            type="String" />
        <variable
            name="captcha"
            type="String" />
        <variable
            name="password"
            type="String" />
        <variable
            name="confirmPassword"
            type="String" />
    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.register.RegisterFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_til_email"
                style="@style/EBook.textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/email"
                app:errorEnabled="true"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_et_email"
                    android:layout_width="match_parent"
                    android:text="@={email}"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_til_captcha"
                style="@style/EBook.textInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:hint="@string/captcha"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:layout_constraintEnd_toStartOf="@+id/register_btn_get_captcha"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_til_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_et_captcha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@={captcha}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/register_btn_get_captcha"
                style="@style/EBook.button"
                android:layout_width="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/get_captcha"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_til_email" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_til_password"
                style="@style/EBook.textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_til_captcha">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="@={password}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_til_confirm_password"
                style="@style/EBook.textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_til_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_et_password_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="@={confirmPassword}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/register_btn_register"
                style="@style/EBook.button"
                android:layout_width="0dp"
                android:layout_marginTop="15dp"
                android:text="@string/register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_til_confirm_password" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>